Changed colr for text in foodcourts

--- a/less/_slider.less
+++ b/less/_slider.less
@@ -157,3 +157,11 @@
 .ba-market-slider {
 	margin: 60px 0;
 }
+
+// ba-foodcourt-slide
+.ba-foodcourt-slide {
+	&__title,
+	&__text {
+		color: #707070;
+	}
+}
