--- a/css/style.css
+++ b/css/style.css
@@ -1238,6 +1238,10 @@ select {
 .ba-market-slider {
   margin: 60px 0;
 }
+.ba-foodcourt-slide__title,
+.ba-foodcourt-slide__text {
+  color: #707070;
+}
 .all-markets {
   padding: 12px 0 0px;
 }
