Changed toggle and city-box

--- a/less/_slider.less
+++ b/less/_slider.less
@@ -40,6 +40,13 @@
 			align-self: flex-start;
 			padding: 0 15px;
 		}
+		@media (max-width: @small-breakpoint) {
+			&__date,
+			&__title,
+			&__text {
+				font-size: 36px;
+		}
+		}
 		.ba-button__slide {
 			align-self: flex-start;
 		}
