--- a/less/style.less
+++ b/less/style.less
@@ -125,7 +125,7 @@ textarea {
 	}
 }
 .ba-city-box {
-	width: 100px;
+	width: 80px;
 	position: relative;
 	background-color: transparent;
 	overflow: hidden;
@@ -145,7 +145,7 @@ textarea {
 		content: " ";
 		top: 50%;
 		transform: translateY(-50%);
-		right: 15px;
+		right: 1px;
 		width: 0;
 		height: 0;
 		border-right: 5px solid transparent;
@@ -252,7 +252,7 @@ textarea {
 	height: 44px;
 	border-radius: 50%;
 	background: #363636;
-	min-height: none;
+	min-height: 0;
 	padding: 0;
 	margin-top: 33px;
 	position: relative;
