--- a/css/style.css
+++ b/css/style.css
@@ -831,7 +831,7 @@ select {
   margin-bottom: 39px;
 }
 .ba-city-box {
-  width: 80px;
+  width: 100px;
   position: relative;
   background-color: transparent;
   overflow: hidden;
@@ -854,7 +854,7 @@ select {
   -webkit-transform: translateY(-50%);
       -ms-transform: translateY(-50%);
           transform: translateY(-50%);
-  right: 1px;
+  right: 15px;
   width: 0;
   height: 0;
   border-right: 5px solid transparent;
@@ -964,7 +964,7 @@ select {
   height: 44px;
   border-radius: 50%;
   background: #363636;
-  min-height: 0;
+  min-height: none;
   padding: 0;
   margin-top: 33px;
   position: relative;
@@ -1140,13 +1140,6 @@ select {
       -ms-flex-item-align: start;
           align-self: flex-start;
   padding: 0 15px;
-}
-@media (max-width: 480px) {
-  .ba-slider .ba-slide__date,
-  .ba-slider .ba-slide__title,
-  .ba-slider .ba-slide__text {
-    font-size: 36px;
-  }
 }
 .ba-slider .ba-slide .ba-button__slide {
   -webkit-align-self: flex-start;
